@@ -3,8 +3,10 @@ package com.ff1.editor.service.patcher.bytecode;
 import com.ff1.editor.utils.CldcStackMapStripper;
 import java.lang.classfile.ClassFile;
 import java.lang.classfile.ClassModel;
+import java.lang.classfile.ClassTransform;
 import java.lang.classfile.CodeBuilder;
 import java.lang.classfile.CodeElement;
+import java.lang.classfile.CodeTransform;
 import java.lang.classfile.Instruction;
 import java.lang.classfile.Label;
 import java.lang.classfile.MethodModel;
@@ -13,7 +15,7 @@ import java.lang.classfile.instruction.ConstantInstruction;
 import java.lang.classfile.instruction.FieldInstruction;
 import java.lang.constant.ClassDesc;
 import java.lang.constant.ConstantDescs;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 
@@ -47,75 +49,98 @@ public final class CottageReviveClassPatcher {
   public static PatcherState state(byte[] classBytes) {
     try {
       ClassModel model = ClassFile.of().parse(classBytes);
+
       List<Instruction> instructions = recoveryInstructions(model);
+
       if (instructions.isEmpty()) {
         return PatcherState.UNKNOWN;
       }
+
       int statusWrites = statusWrites(instructions);
-      if (statusWrites == 0) {
-        return PatcherState.ORIGINAL;
-      }
-      if (statusWrites == 1) {
-        return PatcherState.PATCHED;
-      }
-      log.info("Cottage revive patch state unknown; statusWrites={}", statusWrites);
-      return PatcherState.UNKNOWN;
-    } catch (RuntimeException | LinkageError _) {
+
+      return switch (statusWrites) {
+        case 0 -> PatcherState.ORIGINAL;
+        case 1 -> PatcherState.PATCHED;
+        default -> {
+          log.info("Cottage revive patch state unknown; statusWrites={}", statusWrites);
+
+          yield PatcherState.UNKNOWN;
+        }
+      };
+    } catch (RuntimeException | LinkageError e) {
+      log.warn("Cottage revival patcher state error", e);
+
       return PatcherState.UNKNOWN;
     }
   }
 
   public static byte[] apply(byte[] classBytes) {
     PatcherState state = state(classBytes);
+
     log.info("Applying Cottage revive class patch; current state={}", state);
+
     if (state == PatcherState.PATCHED) {
       return classBytes.clone();
     }
+
     if (state != PatcherState.ORIGINAL) {
       throw new IllegalStateException("Unsupported i.class layout for Cottage revive patch.");
     }
 
     int recoveryCharges = recoveryCharges(classBytes);
+
     ClassFile classFile = ClassFile.of();
+
     ClassModel model = classFile.parse(classBytes);
-    PatchCounter counter = new PatchCounter();
+
+    PatchSiteCounter counter = PatchSiteCounter.create();
+
     byte[] patched =
         classFile.transformClass(
             model,
-            java.lang.classfile.ClassTransform.transformingMethodBodies(
+            ClassTransform.transformingMethodBodies(
                 CottageReviveClassPatcher::isRecoveryMethod,
-                java.lang.classfile.CodeTransform.ofStateful(
+                CodeTransform.ofStateful(
                     () -> new CottageReviveCodeTransform(counter, recoveryCharges))));
+
     patched =
         CldcStackMapStripper.stripMethodStackMap(patched, RECOVERY_METHOD, RECOVERY_DESCRIPTOR);
+
     PatcherState patchedState = state(patched);
+
     if (counter.count() != 1 || patchedState != PatcherState.PATCHED) {
       throw new IllegalStateException(
           "Expected one Cottage recovery method in %s but patched %d; state=%s."
               .formatted(ENTRY_NAME, counter.count(), patchedState));
     }
+
     log.info("Cottage revive class patch applied");
+
     return patched;
   }
 
   private static int recoveryCharges(byte[] classBytes) {
     ClassModel model = ClassFile.of().parse(classBytes);
+
     List<Instruction> instructions = recoveryInstructions(model);
+
     for (int i = 0; i + 1 < instructions.size(); i++) {
       if (isPush(instructions.get(i)) && instructions.get(i + 1).opcode() == Opcode.ISTORE_2) {
         return ((Integer) ((ConstantInstruction) instructions.get(i)).constantValue());
       }
     }
+
     return STOCK_RECOVERY_CHARGES;
   }
 
   private static List<Instruction> recoveryInstructions(ClassModel model) {
     for (MethodModel method : model.methods()) {
       if (isRecoveryMethod(method)) {
-        return instructions(method);
+        return BytecodeInstructions.instructions(method);
       }
     }
-    return List.of();
+
+    return Collections.emptyList();
   }
 
   private static boolean isRecoveryMethod(MethodModel method) {
@@ -123,26 +148,15 @@ public final class CottageReviveClassPatcher {
         && RECOVERY_DESCRIPTOR.equals(method.methodType().stringValue());
   }
 
-  private static List<Instruction> instructions(MethodModel method) {
-    List<Instruction> instructions = new ArrayList<>();
-    if (method.code().isEmpty()) {
-      return instructions;
-    }
-    for (CodeElement element : method.code().orElseThrow()) {
-      if (element instanceof Instruction instruction) {
-        instructions.add(instruction);
-      }
-    }
-    return instructions;
-  }
-
   private static int statusWrites(List<Instruction> instructions) {
     int matches = 0;
+
     for (Instruction instruction : instructions) {
       if (isStatusWrite(instruction)) {
         matches++;
       }
     }
+
     return matches;
   }
 
@@ -159,25 +173,13 @@ public final class CottageReviveClassPatcher {
         && constant.constantValue() instanceof Integer;
   }
 
-  private static final class PatchCounter {
-    private int count;
+  private static final class CottageReviveCodeTransform implements CodeTransform {
 
-    void increment() {
-      count++;
-    }
-
-    int count() {
-      return count;
-    }
-  }
-
-  private static final class CottageReviveCodeTransform
-      implements java.lang.classfile.CodeTransform {
-    private final PatchCounter counter;
+    private final PatchSiteCounter counter;
     private final int recoveryCharges;
     private boolean emitted;
 
-    private CottageReviveCodeTransform(PatchCounter counter, int recoveryCharges) {
+    private CottageReviveCodeTransform(PatchSiteCounter counter, int recoveryCharges) {
       this.counter = counter;
       this.recoveryCharges = recoveryCharges;
     }
@@ -187,6 +189,7 @@ public final class CottageReviveClassPatcher {
       if (emitted) {
         return;
       }
+
       if (element instanceof Instruction) {
         emitReplacement(builder, recoveryCharges);
         emitted = true;
@@ -197,36 +200,33 @@ public final class CottageReviveClassPatcher {
     }
 
     private static void emitReplacement(CodeBuilder builder, int recoveryCharges) {
-      Label notSleepingBag = builder.newLabel();
-      Label notTent = builder.newLabel();
-      Label recoveryLoop = builder.newLabel();
-      Label nextHero = builder.newLabel();
-      Label canRecover = builder.newLabel();
-      Label chargeLoop = builder.newLabel();
-      Label chargesDone = builder.newLabel();
-      Label chargeWithinMax = builder.newLabel();
-      Label hpWithinMax = builder.newLabel();
-      Label done = builder.newLabel();
+      RecoveryLabels labels = RecoveryLabels.create(builder);
 
       builder.sipush(1000).istore(1).bipush(recoveryCharges).istore(2);
-      builder.iload(0).iconst_1().if_icmpne(notSleepingBag);
-      builder.bipush(30).istore(1).iconst_0().istore(2).goto_(recoveryLoop);
-      builder.labelBinding(notSleepingBag).iload(0).iconst_2().if_icmpne(notTent);
-      builder.bipush(60).istore(1).iconst_0().istore(2).goto_(recoveryLoop);
-      builder.labelBinding(notTent).iload(0).iconst_3().if_icmpne(recoveryLoop);
+      builder.iload(0).iconst_1().if_icmpne(labels.notSleepingBag());
+      builder.bipush(30).istore(1).iconst_0().istore(2).goto_(labels.recoveryLoop());
+      builder.labelBinding(labels.notSleepingBag()).iload(0).iconst_2().if_icmpne(labels.notTent());
+      builder.bipush(60).istore(1).iconst_0().istore(2).goto_(labels.recoveryLoop());
+      builder.labelBinding(labels.notTent()).iload(0).iconst_3().if_icmpne(labels.recoveryLoop());
       builder.sipush(999).istore(1);
 
-      builder.labelBinding(recoveryLoop).iconst_0().istore(3);
+      builder.labelBinding(labels.recoveryLoop()).iconst_0().istore(3);
+
       Label heroLoop = builder.newLabel();
-      builder.labelBinding(heroLoop).iload(3).iconst_4().if_icmpge(done);
+
+      builder.labelBinding(heroLoop).iload(3).iconst_4().if_icmpge(labels.done());
+
       loadHero(builder);
+
       builder
           .getfield(hero(), STATUS_FIELD, ConstantDescs.CD_byte)
           .iconst_1()
           .iand()
-          .ifeq(canRecover);
-      builder.iload(0).bipush(COTTAGE_ITEM_KIND).if_icmpne(nextHero);
+          .ifeq(labels.canRecover());
+      builder.iload(0).bipush(COTTAGE_ITEM_KIND).if_icmpne(labels.nextHero());
+
       loadHero(builder);
+
       builder
           .dup()
           .getfield(hero(), STATUS_FIELD, ConstantDescs.CD_byte)
@@ -234,11 +234,13 @@ public final class CottageReviveClassPatcher {
           .iand()
           .i2b()
           .putfield(hero(), STATUS_FIELD, ConstantDescs.CD_byte)
-          .goto_(canRecover);
+          .goto_(labels.canRecover());
 
-      builder.labelBinding(canRecover).iconst_0().istore(4);
-      builder.labelBinding(chargeLoop).iload(4).bipush(8).if_icmpge(chargesDone);
+      builder.labelBinding(labels.canRecover()).iconst_0().istore(4);
+      builder.labelBinding(labels.chargeLoop()).iload(4).bipush(8).if_icmpge(labels.chargesDone());
+
       loadHero(builder);
+
       builder
           .getfield(hero(), CURRENT_CHARGES_FIELD, ClassDesc.ofDescriptor(CHARGES_DESCRIPTOR))
           .iload(4)
@@ -248,31 +250,42 @@ public final class CottageReviveClassPatcher {
           .iadd()
           .i2b()
           .bastore();
+
       loadHero(builder);
+
       builder
           .getfield(hero(), CURRENT_CHARGES_FIELD, ClassDesc.ofDescriptor(CHARGES_DESCRIPTOR))
           .iload(4)
           .baload();
+
       loadHero(builder);
+
       builder
           .getfield(hero(), MAX_CHARGES_FIELD, ClassDesc.ofDescriptor(CHARGES_DESCRIPTOR))
           .iload(4)
           .baload()
-          .if_icmple(chargeWithinMax);
+          .if_icmple(labels.chargeWithinMax());
+
       loadHero(builder);
+
       builder
           .getfield(hero(), CURRENT_CHARGES_FIELD, ClassDesc.ofDescriptor(CHARGES_DESCRIPTOR))
           .iload(4);
+
       loadHero(builder);
+
       builder
           .getfield(hero(), MAX_CHARGES_FIELD, ClassDesc.ofDescriptor(CHARGES_DESCRIPTOR))
           .iload(4)
           .baload()
           .bastore();
-      builder.labelBinding(chargeWithinMax).iinc(4, 1).goto_(chargeLoop);
 
-      builder.labelBinding(chargesDone);
+      builder.labelBinding(labels.chargeWithinMax()).iinc(4, 1).goto_(labels.chargeLoop());
+
+      builder.labelBinding(labels.chargesDone());
+
       loadHero(builder);
+
       builder
           .dup()
           .getfield(hero(), CURRENT_HP_FIELD, ConstantDescs.CD_short)
@@ -280,17 +293,26 @@ public final class CottageReviveClassPatcher {
           .iadd()
           .i2s()
           .putfield(hero(), CURRENT_HP_FIELD, ConstantDescs.CD_short);
+
       loadHero(builder);
+
       builder.getfield(hero(), CURRENT_HP_FIELD, ConstantDescs.CD_short);
+
       loadHero(builder);
-      builder.getfield(hero(), MAX_HP_FIELD, ConstantDescs.CD_short).if_icmple(hpWithinMax);
+
+      builder
+          .getfield(hero(), MAX_HP_FIELD, ConstantDescs.CD_short)
+          .if_icmple(labels.hpWithinMax());
+
       loadHero(builder);
+
       loadHero(builder);
+
       builder.getfield(hero(), MAX_HP_FIELD, ConstantDescs.CD_short);
       builder.putfield(hero(), CURRENT_HP_FIELD, ConstantDescs.CD_short);
-      builder.labelBinding(hpWithinMax);
-      builder.labelBinding(nextHero).iinc(3, 1).goto_(heroLoop);
-      builder.labelBinding(done).return_();
+      builder.labelBinding(labels.hpWithinMax());
+      builder.labelBinding(labels.nextHero()).iinc(3, 1).goto_(heroLoop);
+      builder.labelBinding(labels.done()).return_();
     }
 
     private static void loadHero(CodeBuilder builder) {
@@ -307,6 +329,33 @@ public final class CottageReviveClassPatcher {
 
     private static ClassDesc hero() {
       return ClassDesc.of(HERO_CLASS_NAME);
+    }
+  }
+
+  private record RecoveryLabels(
+      Label notSleepingBag,
+      Label notTent,
+      Label recoveryLoop,
+      Label nextHero,
+      Label canRecover,
+      Label chargeLoop,
+      Label chargesDone,
+      Label chargeWithinMax,
+      Label hpWithinMax,
+      Label done) {
+
+    private static RecoveryLabels create(CodeBuilder builder) {
+      return new RecoveryLabels(
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel(),
+          builder.newLabel());
     }
   }
 }
