@@ -3,8 +3,10 @@ package com.ff1.editor.service.patcher.bytecode;
 import com.ff1.editor.utils.CldcStackMapStripper;
 import java.lang.classfile.ClassFile;
 import java.lang.classfile.ClassModel;
+import java.lang.classfile.ClassTransform;
 import java.lang.classfile.CodeBuilder;
 import java.lang.classfile.CodeElement;
+import java.lang.classfile.CodeTransform;
 import java.lang.classfile.Instruction;
 import java.lang.classfile.MethodModel;
 import java.lang.classfile.Opcode;
@@ -15,10 +17,7 @@ import java.lang.classfile.instruction.IncrementInstruction;
 import java.lang.classfile.instruction.LoadInstruction;
 import java.lang.classfile.instruction.StoreInstruction;
 import java.lang.constant.ClassDesc;
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Deque;
-import java.util.List;
+import java.util.*;
 import lombok.extern.slf4j.Slf4j;
 
 /**
@@ -41,60 +40,104 @@ public final class WeaponAffinityDamageClassPatcher {
   private static final String ITEM_CLASS_NAME = "j";
   private static final String WEAPON_RECORDS_FIELD = "c";
   private static final String WEAPON_RECORDS_DESCRIPTOR = "[[S";
+  private static final int ANY_BYTE = -1;
+  private static final int[] DIRECT_WEAPON_DAMAGE_PATTERN = {
+    0x15,
+    ATTACK_LOCAL,
+    0xb2,
+    ANY_BYTE,
+    ANY_BYTE,
+    0x15,
+    WEAPON_INDEX_LOCAL,
+    0x32,
+    0x06,
+    0x35,
+    0x05,
+    0x6c,
+    0x60,
+    0x36,
+    ATTACK_LOCAL
+  };
+  private static final int[] DIRECT_ACCURACY_CLAMP_PATTERN = {
+    0x15, AFFINITY_MATCH_LOCAL, 0x99, ANY_BYTE, ANY_BYTE, 0x11, 0x00, 0xff, 0x36, HIT_CHANCE_LOCAL
+  };
 
   private WeaponAffinityDamageClassPatcher() {}
 
   public static PatcherState state(byte[] classBytes) {
     try {
       ClassModel model = ClassFile.of().parse(classBytes);
+
       List<Instruction> instructions = physicalDamageInstructions(model);
+
       if (instructions.isEmpty()) {
         log.info("Weapon affinity damage patch state unknown; physical damage method not found");
         return PatcherState.UNKNOWN;
       }
+
       int originalSites = originalFlatAffinitySites(instructions);
       int damageSites = patchedWeaponDamageSites(instructions);
       int accuracySites = patchedAccuracyClampSites(instructions);
+      int directDamageSites = directPatternSites(classBytes, DIRECT_WEAPON_DAMAGE_PATTERN);
+      int directAccuracySites = directPatternSites(classBytes, DIRECT_ACCURACY_CLAMP_PATTERN);
+
       if (originalSites == 1 && damageSites == 0) {
         return PatcherState.ORIGINAL;
       }
-      if (originalSites == 0 && damageSites == 1 && accuracySites >= 1) {
+
+      if (originalSites == 0
+          && (damageSites == 1 || directDamageSites == 1)
+          && (accuracySites >= 1 || directAccuracySites >= 1)) {
         return PatcherState.PATCHED;
       }
+
       log.info(
-          "Weapon affinity damage patch state unknown; originalSites={}, damageSites={}, accuracySites={}",
+          "Weapon affinity damage patch state unknown; originalSites={}, damageSites={}, accuracySites={}, directDamageSites={}, directAccuracySites={}",
           originalSites,
           damageSites,
-          accuracySites);
+          accuracySites,
+          directDamageSites,
+          directAccuracySites);
+
       return PatcherState.UNKNOWN;
-    } catch (RuntimeException | LinkageError _) {
+    } catch (RuntimeException | LinkageError e) {
+      log.warn("+50% weakness affinity damage weapon patcher state error", e);
+
       return PatcherState.UNKNOWN;
     }
   }
 
   public static byte[] apply(byte[] classBytes) {
     PatcherState state = state(classBytes);
+
     log.info("Applying weapon affinity damage class patch; current state={}", state);
+
     if (state == PatcherState.PATCHED) {
       return classBytes.clone();
     }
+
     if (state != PatcherState.ORIGINAL) {
       throw new IllegalStateException(
           "Unsupported g.class layout for weapon affinity damage patch.");
     }
 
     ClassFile classFile = ClassFile.of();
+
     ClassModel model = classFile.parse(classBytes);
-    PatchCounter counter = new PatchCounter();
+
+    ExtendedPatchCounter counter = new ExtendedPatchCounter();
+
     byte[] patched =
         classFile.transformClass(
             model,
-            java.lang.classfile.ClassTransform.transformingMethodBodies(
+            ClassTransform.transformingMethodBodies(
                 WeaponAffinityDamageClassPatcher::isPhysicalDamageMethod,
-                java.lang.classfile.CodeTransform.ofStateful(
-                    () -> new WeaponAffinityDamageCodeTransform(counter))));
+                CodeTransform.ofStateful(() -> new WeaponAffinityDamageCodeTransform(counter))));
+
     patched = stripStaleStackMap(patched);
+
     PatcherState patchedState = state(patched);
+
     if (counter.flatBonusSites() != 1
         || counter.accuracySites() != 1
         || counter.weaponDamageSites() != 1
@@ -108,7 +151,9 @@ public final class WeaponAffinityDamageClassPatcher {
                   counter.accuracySites(),
                   patchedState));
     }
+
     log.info("Weapon affinity damage class patch applied");
+
     return patched;
   }
 
@@ -120,10 +165,11 @@ public final class WeaponAffinityDamageClassPatcher {
   private static List<Instruction> physicalDamageInstructions(ClassModel model) {
     for (MethodModel method : model.methods()) {
       if (isPhysicalDamageMethod(method)) {
-        return instructions(method);
+        return BytecodeInstructions.instructions(method);
       }
     }
-    return List.of();
+
+    return Collections.emptyList();
   }
 
   private static boolean isPhysicalDamageMethod(MethodModel method) {
@@ -131,47 +177,40 @@ public final class WeaponAffinityDamageClassPatcher {
         && PHYSICAL_DAMAGE_DESCRIPTOR.equals(method.methodType().stringValue());
   }
 
-  private static List<Instruction> instructions(MethodModel method) {
-    List<Instruction> instructions = new ArrayList<>();
-    if (method.code().isEmpty()) {
-      return instructions;
-    }
-    for (CodeElement element : method.code().orElseThrow()) {
-      if (element instanceof Instruction instruction) {
-        instructions.add(instruction);
-      }
-    }
-    return instructions;
-  }
-
   private static int originalFlatAffinitySites(List<Instruction> instructions) {
     int matches = 0;
+
     for (int i = 0; i <= instructions.size() - 2; i++) {
       if (isOriginalFlatAffinityWindow(instructions.subList(i, i + 2))) {
         matches++;
       }
     }
+
     return matches;
   }
 
   private static int patchedAccuracyClampSites(List<Instruction> instructions) {
     int matches = 0;
+
     for (int i = 0; i <= instructions.size() - 2; i++) {
       if (isPush(instructions.get(i), 255)
           && isIntStore(instructions.get(i + 1), HIT_CHANCE_LOCAL)) {
         matches++;
       }
     }
+
     return matches;
   }
 
   private static int patchedWeaponDamageSites(List<Instruction> instructions) {
     int matches = 0;
+
     for (int i = 0; i <= instructions.size() - 10; i++) {
       if (isPatchedWeaponDamageWindow(instructions.subList(i, i + 10))) {
         matches++;
       }
     }
+
     return matches;
   }
 
@@ -227,7 +266,28 @@ public final class WeaponAffinityDamageClassPatcher {
         && integer == value;
   }
 
-  private static final class PatchCounter {
+  private static int directPatternSites(byte[] data, int[] pattern) {
+    int matches = 0;
+    for (int offset = 0; offset <= data.length - pattern.length; offset++) {
+      if (matchesPattern(data, offset, pattern)) {
+        matches++;
+      }
+    }
+    return matches;
+  }
+
+  private static boolean matchesPattern(byte[] data, int offset, int[] pattern) {
+    for (int i = 0; i < pattern.length; i++) {
+      int expected = pattern[i];
+      if (expected != ANY_BYTE && (data[offset + i] & 0xff) != expected) {
+        return false;
+      }
+    }
+    return true;
+  }
+
+  private static final class ExtendedPatchCounter {
+
     private int flatBonusSites;
     private int weaponDamageSites;
     private int accuracySites;
@@ -257,14 +317,14 @@ public final class WeaponAffinityDamageClassPatcher {
     }
   }
 
-  private static final class WeaponAffinityDamageCodeTransform
-      implements java.lang.classfile.CodeTransform {
-    private final PatchCounter counter;
+  private static final class WeaponAffinityDamageCodeTransform implements CodeTransform {
+
+    private final ExtendedPatchCounter counter;
     private final Deque<CodeElement> pending = new ArrayDeque<>();
     private boolean started;
     private boolean accuracyInjected;
 
-    private WeaponAffinityDamageCodeTransform(PatchCounter counter) {
+    private WeaponAffinityDamageCodeTransform(ExtendedPatchCounter counter) {
       this.counter = counter;
     }
 
@@ -280,16 +340,20 @@ public final class WeaponAffinityDamageClassPatcher {
     public void accept(CodeBuilder builder, CodeElement element) {
       if (!started) {
         builder.iconst_0().istore(AFFINITY_MATCH_LOCAL);
+
         started = true;
       }
 
       pending.addLast(element);
+
       if (pending.size() < 4) {
         return;
       }
+
       if (pending.size() > 4) {
         flushFirst(builder);
       }
+
       patchPending(builder);
     }
 
@@ -302,23 +366,30 @@ public final class WeaponAffinityDamageClassPatcher {
 
     private void patchPending(CodeBuilder builder) {
       List<Instruction> instructions = pendingInstructions();
+
       List<Instruction> trailingInstructions = trailingInstructions();
+
       if (isOriginalFlatAffinityWindow(trailingInstructions)) {
         while (pending.size() > 2) {
           builder.with(pending.removeFirst());
         }
+
         emitWeaponDamageBonus(builder);
+
         pending.removeFirst();
         pending.removeFirst();
         counter.flatBonusPatched();
         counter.weaponDamagePatched();
+
         return;
       }
       if (!accuracyInjected
           && instructions.size() >= 3
           && isCriticalClampStart(instructions.subList(0, 3))) {
         emitAccuracyClamp(builder);
+
         accuracyInjected = true;
+
         counter.accuracyPatched();
       }
     }
@@ -329,13 +400,15 @@ public final class WeaponAffinityDamageClassPatcher {
 
     private List<Instruction> pendingInstructions() {
       List<Instruction> instructions = new ArrayList<>(pending.size());
+
       for (CodeElement element : pending) {
         if (element instanceof Instruction instruction) {
           instructions.add(instruction);
         } else {
-          return List.of();
+          return Collections.emptyList();
         }
       }
+
       return instructions;
     }
 
@@ -343,20 +416,25 @@ public final class WeaponAffinityDamageClassPatcher {
       if (pending.size() < 2) {
         return List.of();
       }
+
       List<CodeElement> elements = new ArrayList<>(pending);
+
       List<Instruction> instructions = new ArrayList<>(2);
+
       for (int i = elements.size() - 2; i < elements.size(); i++) {
         if (elements.get(i) instanceof Instruction instruction) {
           instructions.add(instruction);
         } else {
-          return List.of();
+          return Collections.emptyList();
         }
       }
+
       return instructions;
     }
 
     private static void emitAccuracyClamp(CodeBuilder builder) {
       var noAffinity = builder.newLabel();
+
       builder
           .iload(AFFINITY_MATCH_LOCAL)
           .ifeq(noAffinity)
